--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Reader with jsQR</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Leitor de QR Code</title>
+    <link rel="stylesheet" href="../Nova pasta (2)/style.css">
 </head>
 <body>
-    <h1>Leitor de QR CODE</h1>
-    <video id="video" style="width: 100%; height: auto;"></video>
-    <canvas id="canvas" hidden></canvas>
-    <div id="qr-result">Result: <span id="outputData"></span></div>
-    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.js"></script>
+    <h1>Leitor de QR Code</h1>
+    <div id="qr-reader" width="600px"></div>
+    <div id="result">
+        <h2>Resultado:</h2>
+        <p id="result-text"></p>
+    </div>
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <script src="../Nova pasta (2)/script.js"></script>
 </body>
 </html>
